// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Checkbox" renders (dark theme) 1`] = `
.emotion-0 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background: rgb(61, 61, 61);
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px undefined;
  caret-color: #0667c8;
  color: #fff;
  font-weight: 300;
  height: 48px;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 0 16px;
  width: 100%;
}

.emotion-2::-moz-placeholder {
  color: rgb(237, 237, 238);
  font-size: 16px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(237, 237, 238);
  font-size: 16px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(237, 237, 238);
  font-size: 16px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px undefined;
}

.emotion-3 {
  line-height: 22px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.wireinput:checked+.emotion-3::before {
  background: #0667c8 url('data:image/svg+xml; utf8, <svg width="15" height="13" viewBox="0 0 16 13" xmlns="http://www.w3.org/2000/svg"><path d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z" fill="white"/></svg>') no-repeat center;
  border-color: #0667c8;
}

.wireinput:focus+.emotion-3::before {
  border-color: #0667c8;
}

.wireinput:hover+.emotion-3::before {
  border-color: #0667c8;
}

.emotion-3::before {
  background: #edeff0;
  border: 1.5px solid #54585f;
  border-radius: 3px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 22px;
  line-height: 22px;
  margin: 0 8px 0 -16px;
  width: 22px;
}

.emotion-3 a {
  color: #0667c8;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-3 a:hover {
  color: rgb(5, 87, 168);
}

.emotion-3 a:visited,
.emotion-3 a:link,
.emotion-3 a:active {
  color: #0667c8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput emotion-2"
      id="1"
      style={
        Object {
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-3"
      htmlFor="1"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px undefined;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 48px;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 0 16px;
  width: 100%;
}

.emotion-2::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px undefined;
}

.emotion-3 {
  line-height: 22px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.wireinput:checked+.emotion-3::before {
  background: #0667c8 url('data:image/svg+xml; utf8, <svg width="15" height="13" viewBox="0 0 16 13" xmlns="http://www.w3.org/2000/svg"><path d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z" fill="white"/></svg>') no-repeat center;
  border-color: #0667c8;
}

.wireinput:focus+.emotion-3::before {
  border-color: #0667c8;
}

.wireinput:hover+.emotion-3::before {
  border-color: #0667c8;
}

.emotion-3::before {
  background: #edeff0;
  border: 1.5px solid #54585f;
  border-radius: 3px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 22px;
  line-height: 22px;
  margin: 0 8px 0 -16px;
  width: 22px;
}

.emotion-3 a {
  color: #0667c8;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-3 a:hover {
  color: rgb(5, 87, 168);
}

.emotion-3 a:visited,
.emotion-3 a:link,
.emotion-3 a:active {
  color: #0667c8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput emotion-2"
      id="1"
      style={
        Object {
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-3"
      htmlFor="1"
    >
      Check
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders as invalid 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px undefined;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 48px;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 0 16px;
  width: 100%;
}

.emotion-2::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px undefined;
}

.emotion-3 {
  line-height: 22px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.wireinput:checked+.emotion-3::before {
  background: #0667c8 url('data:image/svg+xml; utf8, <svg width="15" height="13" viewBox="0 0 16 13" xmlns="http://www.w3.org/2000/svg"><path d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z" fill="white"/></svg>') no-repeat center;
  border-color: #0667c8;
}

.wireinput:focus+.emotion-3::before {
  border-color: #0667c8;
}

.wireinput:hover+.emotion-3::before {
  border-color: #0667c8;
}

.emotion-3::before {
  background: #edeff0;
  border: 1.5px solid #c20013;
  border-radius: 3px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 22px;
  line-height: 22px;
  margin: 0 8px 0 -16px;
  width: 22px;
}

.emotion-3 a {
  color: #0667c8;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-3 a:hover {
  color: rgb(5, 87, 168);
}

.emotion-3 a:visited,
.emotion-3 a:link,
.emotion-3 a:active {
  color: #0667c8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput emotion-2"
      id="1"
      style={
        Object {
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-3"
      htmlFor="1"
    >
      Check
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders disabled 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background: rgba(71, 73, 75, 0.16000000000000003);
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px undefined;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 48px;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 0 16px;
  width: 100%;
}

.emotion-2::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px undefined;
}

.emotion-3 {
  line-height: 22px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0.56;
}

.wireinput:checked+.emotion-3::before {
  background: #9fa1a7 url('data:image/svg+xml; utf8, <svg width="15" height="13" viewBox="0 0 16 13" xmlns="http://www.w3.org/2000/svg"><path d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z" fill="white"/></svg>') no-repeat center;
  border-color: #0667c8;
}

.emotion-3::before {
  background: #fafafa;
  border: 1.5px solid #9fa1a7;
  border-radius: 3px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 22px;
  line-height: 22px;
  margin: 0 8px 0 -16px;
  width: 22px;
}

.emotion-3 a {
  color: #0667c8;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-3 a:hover {
  color: rgb(5, 87, 168);
}

.emotion-3 a:visited,
.emotion-3 a:link,
.emotion-3 a:active {
  color: #0667c8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput emotion-2"
      disabled={true}
      id="1"
      style={
        Object {
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-3"
      disabled={true}
      htmlFor="1"
    >
      Check
    </label>
  </div>
</div>
`;

exports[`"CheckboxLabel" renders 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: rgb(29, 30, 31);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  color: rgb(29, 30, 31);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
}

.emotion-1 a {
  color: rgb(29, 30, 31);
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Label
  </span>
</div>
`;
